# node_test

./: .gitignore  Cargo.toml  README.md
keyboard_ui/: Cargo.toml
keyboard_ui/src/: draw.rs  lib.rs
keyboard_ui/tests/: ordering.rs
mouse_ui/: Cargo.toml  operators.txt
mouse_ui/examples/: embed.rs
mouse_ui/src/: align.rs  canvas.rs  codebox_editor.rs  column_layout.rs  crash_log.rs  flags.rs  layout.rs  lib.rs  node_autocomplete.rs  node_widget.rs  object_ui.rs  operator_library.rs  patch_canvas.rs  sort.rs  style.rs  theme.rs
patch_graph/: Cargo.toml
patch_graph/src/: export.rs  graph.rs  graph_ops.rs  layout_adapter.rs  lib.rs  node.rs  object.rs  parse.rs  sizing.rs
patch_graph/src/layout/: blocks.rs  config.rs  layered.rs  layout_graph.rs  mod.rs  nav.rs  ports.rs  sugiyama.rs
patch_layout/: Cargo.toml  PLAN.md
patch_layout/src/: blocks.rs  config.rs  graph.rs  layered.rs  lib.rs  sugiyama.rs
src/: app.rs  graph.rs  layout_adapter.rs  main.rs  node_autocomplete.rs  patch_export.rs  style.rs
tools/: gen_patch_canvas.py
