[workspace]
members = [".", "patch_graph", "mouse_ui", "keyboard_ui"]
resolver = "2"

[package]
name = "node_test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pd-style patch editor with automatic graph layout"
readme = "README.md"
repository = "https://github.com/remifluff/node_test"

[[bin]]
name = "pd_editor"
path = "src/main.rs"

[dependencies]
patch_graph = { path = "patch_graph" }
mouse_ui = { path = "mouse_ui" }
keyboard_ui = { path = "keyboard_ui" }
egui = "0.34.1"
eframe = "0.34.1"
log = "0.4.27"
petgraph = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
