[package]
name = "keyboard_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Keyboard-driven sorted patch layout pane"
repository = "https://github.com/remifluff/node_test"

[dependencies]
patch_graph = { path = "../patch_graph" }
mouse_ui = { path = "../mouse_ui" }
egui = "0.34.1"
eframe = "0.34.1"
petgraph = "0.8"
