[package]
name = "mouse_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mouse-driven patch canvas editor"
repository = "https://github.com/remifluff/node_test"

[dependencies]
patch_graph = { path = "../patch_graph" }
egui = "0.34.1"
eframe = "0.34.1"
petgraph = "0.8"
log = "0.4.27"

[dev-dependencies]
